# taxicab-viz

./: .gitignore  README.md  environment.yml  pyproject.toml
docs/: math_notes.md
scripts/: compute_taxicab.py  invert_figures.py  quick_check.py  render_curve_overlay.py  render_distribution.py  render_generic_vs_taxicab.py  render_regime_comparison.py  render_residues.py
src/taxicab/: core.py  curves.py  io.py  residues.py  search.py  signs.py
src/taxicab/viz/: curves.py  histograms.py  regime_comparison.py  residues.py  style.py
tests/: test_core.py  test_curves.py  test_io.py  test_residues.py  test_search.py  test_signs.py  test_style.py  test_viz_curves.py  test_viz_histograms.py
